# abPOA

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  BLOSUM62.mtx  CMakeLists.txt  HOXD70.mtx  MANIFEST.in  Makefile  PAM250.mtx  README.md  TODO.md  abpoa.pc.in  example.c  incre_example.c  pyproject.toml  setup.py  sub_example.c
.github/workflows/: c-cpp.yml  linux-CI.yml  macos-CI.yml  pypi.yml  wheels.yml
evaluation/: README.md  msa_abPOA.c  msa_spoa.cpp  racon_abPOA.c  racon_spoa.cpp  run_msa.py  run_sim.py
evaluation/NanoSim_abPOA/pre-trained_models/human_NA12878_DNA_FAB49712_guppy/: README.txt  training_error_markov_model  training_error_rate.tsv  training_first_match.hist  training_match_markov_model  training_model_profile  training_reads_alignment_rate  training_strandness_rate  training_unaligned_length.pkl
evaluation/NanoSim_abPOA/src/: simulator.py
evaluation/PBSIM_abPOA/: AUTHORS  ChangeLog  INSTALL  PBSIM.sln  README.md  configure.ac
evaluation/PBSIM_abPOA/data/: model_qc_ccs  model_qc_clr
evaluation/PBSIM_abPOA/src/: .gitignore  Makefile.am  PBSIM.cproj  defines.h  helpers.cpp  helpers.h  make_script.sh  output.cpp  output.h  pbsim.cpp  structures.h
evaluation/Racon_abPOA/: README.md  Racon_abPOA_CMakeLists.txt  polisher.cpp  polisher.hpp  window.cpp  window.hpp
include/: abpoa.h  simd_instruction.h
python/: Makefile  README.md  cabpoa.pxd  example.py  msa_example.py  pyabpoa.pyx  setup.py
src/: .abpoa.h.swp  .abpoa_seq.c.swp  abpoa.c  abpoa.h  abpoa_align.c  abpoa_align.h  abpoa_align_simd.c  abpoa_align_simd.h  abpoa_dispatch_simd.c  abpoa_dot_plot.c  abpoa_graph.c  abpoa_graph.h  abpoa_graph_visual.c  abpoa_graph_visual.h  abpoa_output.c  abpoa_output.h  abpoa_plot.c  abpoa_pog.c  abpoa_seed.c  abpoa_seed.h  abpoa_seq.c  abpoa_seq.h  abpoa_simd.c  abpoa_simd.h  abpoa_simd_internal.h  agglo_hier_clu.c  agglo_hier_clu.h  align.h  bpoa.c  bpoa.h  bpoa_align.c  bpoa_align.h  bpoa_graph.c  bpoa_graph.h  bpoa_graph_visual.c  bpoa_graph_visual.h  kalloc.h  kdq.h  kseq.h  kstring.h  (+11 more)
test_data/: 3alleles.fa  heter.fa  heter.fq  seq.fa  test.fa
tests/: ref_consensus.txt  ref_heter.txt  run_all.sh  test_aligned_alloc.c  test_cmake_dispatch.sh  test_cmake_lib_only.sh  test_cmake_subdir.sh  test_dual_link.c  test_dual_link.sh  test_no_simd_include.sh  test_opaque_header.c  test_portable_alloc.sh  test_symbol_namespacing.sh
tests/test_cmake_subdir/: CMakeLists.txt  test_parent.c
